<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/mobile_number_confirmation"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_verification_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/sendvefication_code_msg"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/cancel"
            android:textColor="@color/green" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/green" />

        <TextView
            android:id="@+id/txt_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/dlg_ok"
            android:textColor="@color/green" />
    </LinearLayout>
</LinearLayout>