<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    tools:context="com.mema.muslimkeyboard.activity.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnCancelClick"
        android:text="@string/cancel"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="Set New Password"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_10"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/confirm"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_confpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/green_round_shape"
        android:onClick="OnClickCreateNewPassword"
        android:text="@string/set_new_password"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
