<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verificationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    tools:context="com.mema.muslimkeyboard.activity.VerificationCodeActivity">

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_verification_backbtn"
        android:drawableStart="@drawable/ic_verification_backbtn"
        android:gravity="center_vertical"
        android:text="@string/back"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/verification_code_has_been"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:indeterminate="false"
        android:indeterminateDuration="3000"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black">

            <requestFocus />
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/code"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/edt_confirmation_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="@string/enter_code"
            android:inputType="phone"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/green_round_shape"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/reVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/didt_receive_code_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

</LinearLayout>
