<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    tools:context="com.mema.muslimkeyboard.activity.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnCancelClick"
        android:text="@string/cancel"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/enter_your_mobile"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_10"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/region"
            android:textColor="@color/black" />

        <com.mema.muslimkeyboard.contryspinner.CountrySpinner
            android:id="@+id/spinner"
            style="@style/SpinnerwithNoArrow"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/countryCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#FFFFFF"
            android:hint="+000"
            android:inputType="phone"
            android:textAppearance="?android:textAppearanceSmall">

        </EditText>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="@string/number_phone"
            android:inputType="phone"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/smsVerificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/green_round_shape"
        android:onClick="OnsignUpClick"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
