<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    tools:context="com.mema.muslimkeyboard.activity.profile.UserProfileActivity">

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_verification_backbtn"
        android:drawableStart="@drawable/ic_verification_backbtn"
        android:gravity="center_vertical"
        android:text="@string/back"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/complate_your_profile_txt"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_10"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/round_shape_gray">

        <ImageView
            android:id="@+id/img_userprofile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_userprofile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/camera" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/full_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txt_personname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black">

            <requestFocus />
        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_fullname_check"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:text="@string/tv_email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#FFFFFF"
            android:hint="Enter Your Email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_fullname_check"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/green_round_shape"
        android:onClick="OnNextClick"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>

